sumo/tests/traci/VariableRetrieval/Vehicle/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 164: Get Vehicle Variable: unsupported variable specified
